--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>CAMSHacks 2016</title> 
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
         <link rel="stylesheet" type="text/css" href="css/main.css">
-        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
     </head>
     <body>
         <div class="navbar-fixed">
-            <nav>
+            <nav class="blue">
+              <div class="nav-wrapper container">
                 <a class="brand-logo" id = "brand-logo" href = "#top">CAMSHacks</a>
-                <ul class="right">
+                <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+                <ul class="right hide-on-med-and-down">
                   <li>
                     <a href="">FAQ</a>
                   </li>
@@ -22,8 +25,22 @@
                     <a href="" class = "btn">Register</a>
                   </li>
                 </ul>
+                <ul class="side-nav" id="mobile-demo">
+                <!-- TODO: Add Icons -->
+                  <li>
+                    <a href="">FAQ</a>
+                  </li>
+                  <li>
+                    <a href="">Sponsor</a>
+                  </li>
+                  <li>
+                    <a href="" class = "btn">Register</a>
+                  </li>
+                </ul>
+              </div>
             </nav>
         </div>
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script type="text/javascript" src = "https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
         <script type="text/javascript" src = "js/main.js"></script>
