--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
     </head>
     <body>
-        <div class="navbar-fixed">
+        <div class="navbar-fixed" id = "top">
             <nav class="blue">
               <div class="nav-wrapper container">
                 <a class="brand-logo" id = "brand-logo" href = "#top">CAMSHacks</a>
@@ -28,7 +28,10 @@
                 <ul class="side-nav" id="mobile-demo">
                 <!-- TODO: Add Icons -->
                   <li>
-                    <a href="">FAQ</a>
+                    <h4 class="blue-text center">CAMSHacks</h4>
+                  </li>
+                  <li>
+                     <a href="">FAQ</a>
                   </li>
                   <li>
                     <a href="">Sponsor</a>
@@ -40,7 +43,11 @@
               </div>
             </nav>
         </div>
-
+        <!-- Video Header with CTA -->
+        <div class="video-header">
+          <div class="header-text">
+          </div>
+        </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script type="text/javascript" src = "https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
         <script type="text/javascript" src = "js/main.js"></script>
