--- a/index.html
+++ b/index.html
@@ -4,52 +4,19 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>CAMSHacks 2016</title> 
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
         <link rel="stylesheet" type="text/css" href="css/main.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
+        <link rel="stylesheet" type="text/css" href="jquery-background-video/jquery.background-video.css">
     </head>
     <body>
-        <div class="navbar-fixed" id = "top">
-            <nav class="blue">
-              <div class="nav-wrapper container">
-                <a class="brand-logo" id = "brand-logo" href = "#top">CAMSHacks</a>
-                <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-                <ul class="right hide-on-med-and-down">
-                  <li>
-                    <a href="">FAQ</a>
-                  </li>
-                  <li>
-                    <a href="">Sponsor</a>
-                  </li>
-                  <li>
-                    <a href="" class = "btn">Register</a>
-                  </li>
-                </ul>
-                <ul class="side-nav" id="mobile-demo">
-                <!-- TODO: Add Icons -->
-                  <li>
-                    <h4 class="blue-text center">CAMSHacks</h4>
-                  </li>
-                  <li>
-                     <a href="">FAQ</a>
-                  </li>
-                  <li>
-                    <a href="">Sponsor</a>
-                  </li>
-                  <li>
-                    <a href="" class = "btn">Register</a>
-                  </li>
-                </ul>
-              </div>
-            </nav>
-        </div>
+        <!-- Nav -->
         <!-- Video Header with CTA -->
-        <div class="video-header">
-          <div class="header-text">
-          </div>
-        </div>
+        <!-- FAQ -->
+        <!-- Register -->
+        <!-- Sponsor -->
+        <!-- Footer with social media links, etc -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script type="text/javascript" src = "https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
         <script type="text/javascript" src = "js/main.js"></script>
+        <script type="text/javascript" src = "jquery-background-video/jquery.background-video.js"></script>
     </body>
 </html>
