--- a/index.html
+++ b/index.html
@@ -1,107 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CAMSHacks 2016</title> 
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
-    </head>
-    <body>
-        <div class="navbar-fixed" id = "top">
-            <nav class="blue">
-              <div class="nav-wrapper container">
-                <a class="brand-logo" id = "brand-logo" href = "#top">CAMSHacks</a>
-                <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-                <ul class="right hide-on-med-and-down">
-                  <li>
-                    <a href="">FAQ</a>
-                  </li>
-                  <li>
-                    <a href="">Sponsor</a>
-                  </li>
-                  <li>
-                    <a href="" class = "btn">Register</a>
-                  </li>
-                </ul>
-                <ul class="side-nav" id="mobile-demo">
-                <!-- TODO: Add Icons -->
-                  <li>
-                    <h4 class="blue-text center">CAMSHacks</h4>
-                  </li>
-                  <li>
-                     <a href="">FAQ</a>
-                  </li>
-                  <li>
-                    <a href="">Sponsor</a>
-                  </li>
-                  <li>
-                    <a href="" class = "btn">Register</a>
-                  </li>
-                </ul>
-              </div>
-            </nav>
-        </div>
-        <!-- Video Header with CTA -->
-        <!-- FAQ -->
-        <section>
-          <div class="container">
-            <h4 class="center">Frequently Asked Questions (FAQ)</h4>
-            <hr class="center" size = "20">
-            <div class="row">
-              <div class="col s12 m4">
-                <div class="card white">
-                  <div class="card-content">
-                    <span class="card-title">
-                      Q: Where will CAMSHacks be Held?
-                    </span>
-                    <p>
-                      CAMSHacks will be held at the <strong>Cal State Dominguez Hills </strong>(CAMS' Parent School) <strong>Gymnasium</strong>. 
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="col s12 m4">
-                <div class="card white">
-                  <div class="card-content">
-                    <span class="card-title">
-                      Q: What Do I Have to Make?
-                    </span>
-                    <p>
-                      You can make <strong>anything</strong> that you want to: hardware, API and all types of hacking are OK here!
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="col s12 m4">
-                <div class="card white">
-                  <div class="card-content">
-                    <span class="card-title">
-                      Q: What Should I Bring?
-                    </span>
-                    <p>
-                      We recommend that you bring:
-                      <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                      </ul> 
-                    </p>
-                  </div>
-                </div>
-              </div>
-
-            </div>
-            <div class="row">
-              
-            </div>
-            <div class="row">
-              
-            </div>
-          </div>
-        </section>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-        <script type="text/javascript" src = "https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
-        <script type="text/javascript" src = "js/main.js"></script>
-    </body>
+<head>
+  <title>Welcome | CAMSHacks 2016</title>
+  <!-- Stylesheets -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/genericons.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+</head>
+<body>
+  <!-- Nav -->
+  <span class="icon"></span>
+  <!-- Scripts -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+</body>
 </html>
