Working Video Header

--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html>
 <head>
   <title>Welcome | CAMSHacks 2016</title>
-  <!-- Stylesheets -->
+  <!-- Fonts -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="genericons/genericons/genericons.css">
-  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,500' rel='stylesheet' type='text/css'> <!-- Body font -->
+
+  <!--Stylesheets-->
+  <link rel="stylesheet" href="genericons/genericons/genericons.css">
+  <link rel="stylesheet" href="css/owl.carousel.css">
+  <link rel="stylesheet" href="css/owl.theme.css">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
   <!-- Nav -->
@@ -30,8 +35,18 @@
       </div>
     </div>
   </nav>
+  <!-- Video Background-->
+  <div class="hero" id = "video-header">
+    <div class="container">
+      <!--LOGO (Placeholder)-->
+      <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=144%C3%97144&w=144&h=144" alt="" id = "img-logo" />
+      <h1 class="center" style="color:white">CAMSHacks</h1>
+      <h3 class="center" style="color:white">February 2017</h3>
+    </div>
+  </div>
   <!-- Scripts -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="vide/src/jquery.vide.js" charset="utf-8"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
