--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <!-- Nav -->
-  <nav class="navbar navbar-inverse navbar-fixed-top">
+  <nav class="navbar navbar-custom navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -22,13 +22,13 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#" id="nav-logo">CAMSHacks</a>
+        <a class="navbar-brand" href="#" id="nav-logo">CAMSHACKS</a>
       </div>
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
            <li><a href = "#faq" class="white-text">FAQ</a></li>
-           <li><a href="" onclick='' class="white-text">Partner</a></li>
-           <li><a class="white-text">Register</a></li>
+           <li><a href="" onclick='' class="white-text">PARTNER</a></li>
+           <li><a class="white-text">REGISTER</a></li>
         </ul>
       </div>
     </div>
@@ -39,7 +39,9 @@
       <!--LOGO (Placeholder)-->
       <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=144%C3%97144&w=144&h=144" alt="" id = "img-logo" />
       <h1 class="center" style="color:white">CAMSHacks</h1>
+      <h3 class="center" style="color:white">CSUDH Gym</h3>
       <h3 class="center" style="color:white">February 2017</h3>
+      <a class="btn btn-blank page-scroll" role="button">APPLY</a>
     </div>
   </div>
   <!-- Scripts -->
