About Section and Others

--- a/index.html
+++ b/index.html
@@ -44,6 +44,21 @@
       <a class="btn btn-blank page-scroll" role="button">APPLY</a>
     </div>
   </div>
+  <!--About-->
+  <div id = "about">
+    <div class="container">
+      <h1 class="black-text text-center" id = "about-title">About</h1>
+      <p class="text-center light">
+        CAMS Hacks is a 24 hour hackathon held by students from the California Academy of Mathematics, located at the campus of California State University, Dominguez Hills. Here, you will work with other high school students to build awesome stuff. Come out and hack with us.
+      </p>
+    </div>
+  </div>
+  <!--FAQ-->
+  <div id = "faq">
+    <div class="container">
+
+    </div>
+  </div>
   <!-- Scripts -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
