--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Welcome | CAMSHacks 2016</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Welcome | CAMSHacks</title>
+  <meta name="description" content="CAMS Hacks is the California Academy of Mathematics and Science's 24 hour hackathon, held in Carson, California."/>
+  <meta name="keywords" content="CAMS, California Academy of Mathematics and Science, Hackathon, Hackathon Carson California, CAMSHACKS, CAMS HACKS" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Fonts -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,500' rel='stylesheet' type='text/css'> <!-- Body font -->
@@ -47,7 +52,7 @@
   <!--About-->
   <div id = "about">
     <div class="container">
-      <h1 class="black-text text-center" id = "about-title">About</h1>
+      <h1 class="text-center title">About</h1>
       <p class="text-center light">
         CAMS Hacks is a 24 hour hackathon held by students from the California Academy of Mathematics, located at the campus of California State University, Dominguez Hills. Here, you will work with other high school students to build awesome stuff. Come out and hack with us.
       </p>
@@ -56,7 +61,8 @@
   <!--FAQ-->
   <div id = "faq">
     <div class="container">
-
+      <h1 class="text-center title">FAQ</h1>
+      <!--  -->
     </div>
   </div>
   <!-- Scripts -->
