--- a/index.html
+++ b/index.html
@@ -1,72 +1,92 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Welcome | CAMSHacks</title>
-  <meta name="description" content="CAMS Hacks is the California Academy of Mathematics and Science's 24 hour hackathon, held in Carson, California."/>
-  <meta name="keywords" content="CAMS, California Academy of Mathematics and Science, Hackathon, Hackathon Carson California, CAMSHACKS, CAMS HACKS" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Fonts -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,500' rel='stylesheet' type='text/css'> <!-- Body font -->
+   <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <title>Welcome | CAMSHacks</title>
+      <meta name="description" content="CAMS Hacks is the California Academy of Mathematics and Science's 24 hour hackathon, held in Carson, California."/>
+      <meta name="keywords" content="CAMS, California Academy of Mathematics and Science, Hackathon, Hackathon Carson California, CAMSHACKS, CAMS HACKS" />
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <!-- Fonts -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+      <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,500' rel='stylesheet' type='text/css'>
+      <!-- Body font -->
+      <!--Stylesheets-->
+      <link rel="stylesheet" href="genericons/genericons/genericons.css">
+      <!-- <link rel="stylesheet" href="css/reset.css"> -->
+      <link rel="stylesheet" href="css/main.css">
+   </head>
+   <body>
+      <!-- Nav -->
+      <nav class="navbar navbar-custom navbar-fixed-top">
+         <div class="container">
+            <div class="navbar-header">
+               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+               <span class="sr-only">Toggle navigation</span>
+               <span class="icon-bar"></span>
+               <span class="icon-bar"></span>
+               <span class="icon-bar"></span>
+               </button>
+               <a class="navbar-brand" href="#" id="nav-logo">CAMSHACKS</a>
+            </div>
+            <div class="collapse navbar-collapse">
+               <ul class="nav navbar-nav navbar-right">
+                  <li><a href = "#faq" class="white-text">FAQ</a></li>
+                  <li><a href="" onclick='' class="white-text">PARTNER</a></li>
+                  <li><a class="white-text">REGISTER</a></li>
+               </ul>
+            </div>
+         </div>
+      </nav>
+      <!-- Video Background-->
+      <div class="hero" id = "video-header">
+         <div class="container">
+            <!--LOGO (Placeholder)-->
+            <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=144%C3%97144&w=144&h=144" alt="" id = "img-logo" />
+            <h1 class="center" style="color:white">CAMSHacks</h1>
+            <h3 class="center" style="color:white">CSUDH Gym</h3>
+            <h3 class="center" style="color:white">February 2017</h3>
+            <a class="btn btn-blank page-scroll" role="button">APPLY</a>
+         </div>
+      </div>
+      <!--About-->
+      <div id = "about">
+         <div class="container">
+            <h1 class="text-center title">About</h1>
+            <p class="text-center light">
+               CAMS Hacks is a 24 hour hackathon held by students from the California Academy of Mathematics, located at the campus of California State University, Dominguez Hills. Here, you will work with other high school students to build awesome stuff. Come out and hack with us.
+            </p>
+         </div>
+      </div>
+      <!--FAQ-->
+      <div id = "faq">
+         <div class="container">
+            <h1 class="text-center title">FAQ</h1>
+            <div class="row">
+               <div class="col-sm-4">
+                  <div class="card card-block">
+                     <h4 class="card-title">Q: Who Can Come to CAMS Hacks?</h4>
+                     <p class="card-text">Any high schooler (grades 9-12) can apply to and participate at the event. However, even if you have already graduated, you can still come to mentor!</p>
 
-  <!--Stylesheets-->
-  <link rel="stylesheet" href="genericons/genericons/genericons.css">
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-<body>
-  <!-- Nav -->
-  <nav class="navbar navbar-custom navbar-fixed-top">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#" id="nav-logo">CAMSHACKS</a>
+                  </div>
+               </div>
+               <div class="col-sm-4">
+                  <div class="card card-block">
+                     <h4 class="card-title">Q: What Should I Bring?</h4>
+                     <p class="card-text">For security purposes, we require you to bring your student ID or equivalent indentification. Make sure to bring your laptops, phones, chargers, etc. Also, we recommend you bring sleeping bags, power strips, and toiletries.</p>
+                  </div>
+               </div>
+               <div class="col-sm-4">
+                  <div class="card card-block">
+                     <h4 class="card-title">Q: What if I am a CAMS Student?</h4>
+                     <p class="card-text">If you are a CAMS student, there is no need for application, just show up to the event with your student ID card!</p>
+                  </div>
+               </div>
+            </div>
+         </div>
       </div>
-      <div class="collapse navbar-collapse">
-        <ul class="nav navbar-nav navbar-right">
-           <li><a href = "#faq" class="white-text">FAQ</a></li>
-           <li><a href="" onclick='' class="white-text">PARTNER</a></li>
-           <li><a class="white-text">REGISTER</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <!-- Video Background-->
-  <div class="hero" id = "video-header">
-    <div class="container">
-      <!--LOGO (Placeholder)-->
-      <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=144%C3%97144&w=144&h=144" alt="" id = "img-logo" />
-      <h1 class="center" style="color:white">CAMSHacks</h1>
-      <h3 class="center" style="color:white">CSUDH Gym</h3>
-      <h3 class="center" style="color:white">February 2017</h3>
-      <a class="btn btn-blank page-scroll" role="button">APPLY</a>
-    </div>
-  </div>
-  <!--About-->
-  <div id = "about">
-    <div class="container">
-      <h1 class="text-center title">About</h1>
-      <p class="text-center light">
-        CAMS Hacks is a 24 hour hackathon held by students from the California Academy of Mathematics, located at the campus of California State University, Dominguez Hills. Here, you will work with other high school students to build awesome stuff. Come out and hack with us.
-      </p>
-    </div>
-  </div>
-  <!--FAQ-->
-  <div id = "faq">
-    <div class="container">
-      <h1 class="text-center title">FAQ</h1>
-      <!--  -->
-    </div>
-  </div>
-  <!-- Scripts -->
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-</body>
+      <!-- Scripts -->
+      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+   </body>
 </html>
