--- a/index.html
+++ b/index.html
@@ -43,20 +43,27 @@
          <div class="container">
             <!--LOGO (Placeholder)-->
             <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=144%C3%97144&w=144&h=144" alt="" id = "img-logo" />
-            <h1 class="center" style="color:white">CAMSHacks</h1>
-            <h3 class="center" style="color:white">CSUDH Gym</h3>
-            <h3 class="center" style="color:white">February 2017</h3>
+            <h1 class="center white-text">CAMSHacks</h1>
+            <h3 class="center white-text" id = "hero-subtext">CSUDH Gym | February 24-25, 2017.</h3>
             <a class="btn btn-blank page-scroll" role="button">APPLY</a>
          </div>
       </div>
       <!--About-->
       <div id = "about">
          <div class="container">
-            <h1 class="text-center title">About</h1>
-            <p class="text-center light">
-               CAMS Hacks is a 24 hour hackathon held by students from the California Academy of Mathematics, located at the campus of California State University, Dominguez Hills. Here, you will work with other high school students to build awesome stuff. Come out and hack with us.
+            <h1 class="text-center title" style="padding-top:0">About</h1>
+            <p class="text-center light" id = "about-text">
+               CAMS Hacks is a 24 hour hackathon held by students from the California Academy of Mathematics, located in the gym of the California State University, Dominguez Hills (CSUDH) campus. Here, you will work with other high school students to build awesome stuff. Come out and hack with us.
             </p>
          </div>
+      </div>
+      <!--Apply-->
+      <div class="belizeHole" id = "apply">
+        <h1 class="white-text text-center">APPLY</h1>
+        <h4 class="white-text text-center" id = "notifyHeading">
+          Be notified of when applications open.
+        </h4>
+        <!--TODO: Add the actual button lol (MailChimp)-->
       </div>
       <!--FAQ-->
       <div id = "faq">
@@ -67,7 +74,6 @@
                   <div class="card card-block">
                      <h4 class="card-title">Q: Who Can Come to CAMS Hacks?</h4>
                      <p class="card-text">Any high schooler (grades 9-12) can apply to and participate at the event. However, even if you have already graduated, you can still come to mentor!</p>
-
                   </div>
                </div>
                <div class="col-sm-4">
