--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
       <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,500' rel='stylesheet' type='text/css'>
       <!-- Body font -->
       <!--Stylesheets-->
-      <link rel="stylesheet" href="genericons/genericons/genericons.css">
-      <!-- <link rel="stylesheet" href="css/reset.css"> -->
+      <link rel="stylesheet" href="css/font-awesome.min.css">
       <link rel="stylesheet" href="css/main.css">
    </head>
    <body>
@@ -72,13 +71,13 @@
             <div class="row">
                <div class="col-sm-4">
                   <div class="card card-block">
-                     <h4 class="card-title">Q: Who Can Come to CAMS Hacks?</h4>
+                     <h4 class="card-title">Q: Who can come to CAMS Hacks?</h4>
                      <p class="card-text">Any high schooler (grades 9-12) can apply to and participate at the event. However, even if you have already graduated, you can still come to mentor!</p>
                   </div>
                </div>
                <div class="col-sm-4">
                   <div class="card card-block">
-                     <h4 class="card-title">Q: What Should I Bring?</h4>
+                     <h4 class="card-title">Q: What should I bring?</h4>
                      <p class="card-text">For security purposes, we require you to bring your student ID or equivalent indentification. Make sure to bring your laptops, phones, chargers, etc. Also, we recommend you bring sleeping bags, power strips, and toiletries.</p>
                   </div>
                </div>
@@ -89,7 +88,52 @@
                   </div>
                </div>
             </div>
+            <div class="row">
+               <div class="col-sm-4">
+                  <div class="card card-block">
+                     <h4 class="card-title">Q: What if I can't code?</h4>
+                     <p class="card-text">That's fine! We will have mentors and workshops to assist you in coding your dream programs.</p>
+                  </div>
+               </div>
+               <div class="col-sm-4">
+                  <div class="card card-block">
+                     <h4 class="card-title">Q: Do I have to stay inside of the building at all times? </h4>
+                     <p class="card-text">We recommend that you do, but if necessary, you may leave the building.</p>
+                  </div>
+               </div>
+               <div class="col-sm-4">
+                  <div class="card card-block">
+                     <h4 class="card-title">Q: Who is in charge of CAMS Hacks?</h4>
+                     <p class="card-text">CAMS Hacks is run by students at the California Academy of Mathematics and Science.</p>
+                  </div>
+               </div>
+            </div>
+          <div class="row">
+             <div class="col-sm-4">
+                <div class="card card-block">
+                   <h4 class="card-title">Q: How many people can be in a team?</h4>
+                   <p class="card-text">There is a limit of 4 members per team. If you do not already have a team, we will have team-forming sessions at the start of the event!</p>
+                </div>
+             </div>
+             <div class="col-sm-4">
+                <div class="card card-block">
+                   <h4 class="card-title">Q: What is the cost of attending CAMS Hacks?</h4>
+                   <p class="card-text">Absolutely free! Also, meals and snacks are provided, so have no fear of getting hungry!</p>
+                </div>
+             </div>
+             <div class="col-sm-4">
+                <div class="card card-block">
+                   <h4 class="card-title">Q: My question was unanswered here. Where can I ask?</h4>
+                   <p class="card-text">Feel free to email us at <a href="mailto:contact@camshacks.org">contact@camshacks.org</a>!. We will try responding as soon as we can.</p>
+                </div>
+             </div>
+          </div>
          </div>
+      </div>
+      <div id="footer">
+        <div class="container">
+          <p class="footer-block">Place sticky footer content here.</p>
+        </div>
       </div>
       <!-- Scripts -->
       <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
