--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,500' rel='stylesheet' type='text/css'>
       <!-- Body font -->
       <!--Stylesheets-->
-      <link rel="stylesheet" href="css/font-awesome.min.css">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
       <link rel="stylesheet" href="css/main.css">
    </head>
    <body>
@@ -28,8 +28,8 @@
                </button>
                <a class="navbar-brand" href="#" id="nav-logo">CAMSHACKS</a>
             </div>
-            <div class="collapse navbar-collapse">
-               <ul class="nav navbar-nav navbar-right">
+            <div class="collapse navbar-collapse" style="color:white">
+               <ul class="nav navbar-nav navbar-right" style="color:white">
                   <li><a href = "#faq" class="white-text">FAQ</a></li>
                   <li><a href="" onclick='' class="white-text">PARTNER</a></li>
                   <li><a class="white-text">REGISTER</a></li>
@@ -67,7 +67,7 @@
       <!--FAQ-->
       <div id = "faq">
          <div class="container">
-            <h1 class="text-center title">FAQ</h1>
+            <h1 class="text-center title" style="padding-top:0;">FAQ</h1>
             <div class="row">
                <div class="col-sm-4">
                   <div class="card card-block">
@@ -132,7 +132,17 @@
       </div>
       <div id="footer">
         <div class="container">
-          <p class="footer-block">Place sticky footer content here.</p>
+          <div class="text-center">
+            <a href="#">
+              <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
+            </a>
+            <a href="#">
+              <i class="fa fa-facebook-square	fa-3x" aria-hidden="true"></i>
+            </a>
+            <a href="#">
+              <i class="fa fa-twitter-square fa-3x" id="last-icon" aria-hidden="true"></i>
+            </a>
+          </div>
         </div>
       </div>
       <!-- Scripts -->
