--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <nav class="navbar navbar-custom navbar-fixed-top">
          <div class="container">
             <div class="navbar-header">
-               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav-collapse" style="color:white;">
                <span class="sr-only">Toggle navigation</span>
                <span class="icon-bar"></span>
                <span class="icon-bar"></span>
@@ -28,7 +28,7 @@
                </button>
                <a class="navbar-brand" href="#" id="nav-logo">CAMSHACKS</a>
             </div>
-            <div class="collapse navbar-collapse" style="color:white">
+            <div class="collapse navbar-collapse" style="color:white" id = "nav-collapse">
                <ul class="nav navbar-nav navbar-right" style="color:white">
                   <li><a href = "#faq" class="white-text">FAQ</a></li>
                   <li><a href="" onclick='' class="white-text">PARTNER</a></li>
