--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
          </div>
       </nav>
       <!-- Video Background-->
-      <div class="hero" id = "video-header">
+      <div class="hero">
          <div class="container">
             <!--LOGO (Placeholder)-->
             <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=144%C3%97144&w=144&h=144" alt="" id = "img-logo" />
@@ -49,9 +49,9 @@
          </div>
       </div>
       <!--About-->
-      <div id = "about">
+      <div>
          <div class="container">
-            <h1 class="text-center title" style="padding-top:0">About</h1>
+            <h1 class="text-center title">ABOUT</h1>
             <hr class="text-center">
             <p class="text-center light" id = "about-text">
                CAMS Hacks is a 24 hour hackathon held by students from the California Academy of Mathematics, located in the gym of the California State University, Dominguez Hills (CSUDH) campus. Here, you will work with other high school students to build awesome stuff. Come out and hack with us.
