--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title>Welcome | CAMSHacks</title>
+      <title>CAMSHacks</title>
       <meta name="description" content="CAMS Hacks is the California Academy of Mathematics and Science's 24 hour hackathon, held in Carson, California."/>
       <meta name="keywords" content="CAMS, California Academy of Mathematics and Science, Hackathon, Hackathon Carson California, CAMSHACKS, CAMS HACKS" />
       <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -147,7 +147,7 @@
         </div>
       </div>
       <div class="">
-        <h1 class="text-center">Organizers</h1>
+        <h1 class="text-center">ORGANIZERS</h1>
         <hr class="text-center">
         <div class="row">
           <!--Image Cards with Name on Hover-->
