Changes to hero

--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
             <!--LOGO (Placeholder)-->
             <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=144%C3%97144&w=144&h=144" alt="" id = "img-logo" />
             <h1 class="center white-text">CAMSHacks</h1>
-            <hr class="text-center">
             <h3 class="center white-text" id = "hero-subtext">CSUDH Gym | February 24-25, 2017.</h3>
             <a class="btn btn-blank page-scroll" role="button">APPLY</a>
+            <a href="#about" class="scroll-down" address="true"></a>
          </div>
       </div>
       <!--About-->
-      <div>
+      <div id = "about">
          <div class="container">
             <h1 class="text-center title">ABOUT</h1>
-            <hr class="text-center">
+            <center><hr class="text-center"></center>
             <p class="text-center light" id = "about-text">
                CAMS Hacks is a 24 hour hackathon held by students from the California Academy of Mathematics, located in the gym of the California State University, Dominguez Hills (CSUDH) campus. Here, you will work with other high school students to build awesome stuff. Come out and hack with us.
             </p>
@@ -61,7 +61,7 @@
       <!--Apply-->
       <div class="belizeHole" id = "apply">
         <h1 class="white-text text-center">APPLY</h1>
-        <hr class="text-center">
+        <center><hr class="text-center"></center>
         <h4 class="white-text text-center" id = "notifyHeading">
           Be notified of when applications open.
         </h4>
@@ -71,7 +71,7 @@
       <div id = "faq">
          <div class="container">
             <h1 class="text-center title" style="padding-top:0;">FAQ</h1>
-            <hr class="text-center">
+            <center><hr class="text-center"></center>
             <div class="row">
                <div class="col-sm-4">
                   <div class="card card-block">
@@ -136,26 +136,26 @@
       </div>
       <div class="belizeHole" id = "sponsor">
         <h1 class="white-text text-center">SPONSOR</h1>
-        <hr>
+        <center><hr>
         <h4 class="white-text text-center">
           Interested in sponsorship? Email us at <a href="mailto:sponsor@camshacks.org" class="white-text">sponsorship@camshacks.org</a>
         </h4>
         <!--Row with Sponsorship Infomration-->
 
-        <div class="text-center">
+        <div class="text-center"></center>
           <a class="btn btn-blank text-center">SPONSOR</a>
         </div>
       </div>
       <div class="">
-        <h1 class="text-center">ORGANIZERS</h1>
-        <hr class="text-center">
+        <h1 class="text-center"></center>ORGANIZERS</h1>
+        <center><hr class="text-center"></center>
         <div class="row">
           <!--Image Cards with Name on Hover-->
         </div>
       </div>
       <div id="footer">
         <div class="container">
-          <div class="text-center">
+          <div class="text-center"></center>
             <a href="#">
               <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
             </a>
