--- a/index.html
+++ b/index.html
@@ -136,18 +136,19 @@
       </div>
       <div class="belizeHole" id = "sponsor">
         <h1 class="white-text text-center">SPONSOR</h1>
-        <center><hr>
+        <center><hr></center>
         <h4 class="white-text text-center">
           Interested in sponsorship? Email us at <a href="mailto:sponsor@camshacks.org" class="white-text">sponsorship@camshacks.org</a>
         </h4>
         <!--Row with Sponsorship Infomration-->
-
-        <div class="text-center"></center>
+        <center>
+        <div class="text-center">
           <a class="btn btn-blank text-center">SPONSOR</a>
         </div>
+      </center>
       </div>
       <div class="">
-        <h1 class="text-center"></center>ORGANIZERS</h1>
+        <h1 class="text-center">ORGANIZERS</h1>
         <center><hr class="text-center"></center>
         <div class="row">
           <!--Image Cards with Name on Hover-->
