--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <meta name="keywords" content="CAMS, California Academy of Mathematics and Science, Hackathon, Hackathon Carson California, CAMSHACKS, CAMS HACKS" />
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <!-- Fonts -->
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
       <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
       <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
       <!-- Body font -->
