--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
    <head>
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
       <title>CAMSHacks</title>
       <meta name="description" content="CAMS Hacks is the California Academy of Mathematics and Science's 24 hour hackathon, held in Carson, California."/>
       <meta name="keywords" content="CAMS, California Academy of Mathematics and Science, Hackathon, Hackathon Carson California, CAMSHACKS, CAMS HACKS" />
