--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         </div>
       </div>
       <!-- Scripts -->
-      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+      <script src="js/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
       <script type="text/javascript" src = "js/main.js"></script>
 
