Fix Spacing of Sections

--- a/index.html
+++ b/index.html
@@ -55,18 +55,21 @@
             <h1 class="text-center title">ABOUT</h1>
             <center><hr class="text-center"></center>
             <p class="text-center light" id = "about-text">
-               CAMS Hacks is a 24 hour hackathon held by students from the California Academy of Mathematics, located in the gym of the California State University, Dominguez Hills (CSUDH) campus. Here, you will work with other high school students to build awesome stuff. Come out and hack with us.
+               CAMS Hacks is a 24 hour hackathon held by students from the California Academy of Mathematics, located in the gym of the California State University, Dominguez Hills (CSUDH) campus. Here, you will work with other high school students to build awesome stuff. Come out and hack with us!
             </p>
          </div>
       </div>
       <!--Apply-->
       <div class="belizeHole" id = "apply">
-        <h1 class="white-text text-center">APPLY</h1>
-        <center><hr class="text-center"></center>
-        <h4 class="white-text text-center" id = "notifyHeading">
-          Be notified of when applications open.
-        </h4>
-        <!--TODO: Add the actual button lol (MailChimp)-->
+        <div id="apply-subtext">
+          <h1 class="white-text text-center">APPLY</h1>
+          <center><hr class="text-center"></center>
+          <h4 class="white-text text-center" id = "notifyHeading">
+            Be notified when applications open.
+          </h4>
+           <center><a class="btn btn-blank page-scroll" role="button" style = "">APPLY</a></center>
+          <!--TODO: Add the actual button lol (MailChimp)-->
+        </div>
       </div>
       <!--FAQ-->
       <div id = "faq">
@@ -136,19 +139,19 @@
          </div>
       </div>
       <div class="belizeHole" id = "sponsor">
-        <h1 class="white-text text-center">SPONSOR</h1>
-        <center><hr></center>
-        <h4 class="white-text text-center">
-          Interested in sponsorship? Email us at <a href="mailto:sponsor@camshacks.org" class="white-text">sponsorship@camshacks.org</a>
-        </h4>
-        <!--Row with Sponsorship Infomration-->
-        <center>
-        <div class="text-center">
-          <a class="btn btn-blank text-center">SPONSOR</a>
+        <div>
+            <h1 class="white-text text-center">SPONSOR</h1>
+            <center><hr></center>
+            <h4 class="white-text text-center">
+              Interested in sponsorship? Email us at <a href="mailto:sponsor@camshacks.org" class="white-text">sponsorship@camshacks.org</a>
+            </h4>
+            <!--Row with Sponsorship Infomration-->
+            <center>
+              <a class="btn btn-blank text-center">SPONSOR</a>
+          </center>
         </div>
-      </center>
       </div>
-      <div class="">
+      <div id = "organizers">
         <h1 class="text-center">ORGANIZERS</h1>
         <center><hr class="text-center"></center>
         <div class="row">
@@ -157,17 +160,20 @@
       </div>
       <div id="footer">
         <div class="container">
-          <div class="text-center"></center>
+          <div class="text-center">
             <a href="#">
-              <i class="fa fa-instagram fa-3x" aria-hidden="true"></i>
+              <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
             </a>
             <a href="#">
-              <i class="fa fa-facebook-square	fa-3x" aria-hidden="true"></i>
+              <i class="fa fa-facebook-square	fa-2x" aria-hidden="true"></i>
             </a>
             <a href="#">
-              <i class="fa fa-twitter-square fa-3x" id="last-icon" aria-hidden="true"></i>
+              <i class="fa fa-twitter-square fa-2x" id="last-icon" aria-hidden="true"></i>
             </a>
           </div>
+          <center>
+            <p class = "white-text">2016 | CAMSHacks</p>
+          </center>
         </div>
       </div>
       <!-- Scripts -->
